@@ -1,12 +1,0 @@
-# $NetBSD: Makefile,v 1.6 2011/09/24 05:09:57 obache Exp $
-
-DISTNAME=	roauth-0.0.8
-CATEGORIES=	security
-
-MAINTAINER=	obache@NetBSD.org
-HOMEPAGE=	http://github.com/maccman/roauth
-COMMENT=	Simple Ruby OAuth library
-LICENSE=	mit
-
-.include "../../lang/ruby/gem.mk"
-.include "../../mk/bsd.pkg.mk"
