@@ -1,11 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2011/06/10 02:09:57 obache Exp $
-${GEM_HOME}/cache/${GEM_NAME}.gem
-${GEM_LIBDIR}/LICENSE
-${GEM_LIBDIR}/README.markdown
-${GEM_LIBDIR}/Rakefile
-${GEM_LIBDIR}/VERSION
-${GEM_LIBDIR}/lib/roauth.rb
-${GEM_LIBDIR}/roauth.gemspec
-${GEM_LIBDIR}/test/helper.rb
-${GEM_LIBDIR}/test/test_roauth.rb
-${GEM_HOME}/specifications/${GEM_NAME}.gemspec
